--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,15 +1,18 @@
 {
   "name": "Test APP",
   "author": {
-    "name": "Rodolfo Oliveira",
-    "email": "rodolfo.oliveira@eteg.com.br",
-    "url": "https://eteg.com.br"
+    "name": "Marcos Antonio dos Santos",
+    "email": "marcosantonio.dev@gmail.com",
+    "url": ""
   },
   "defaultLocale": "pt",
   "private": true,
   "location": {
     "support": {
-      "user_sidebar": "assets/iframe.html"
+      "ticket_sidebar": {
+        "url": "assets/iframe.html",
+        "flexible": true
+      }
     }
   },
   "parameters": [
@@ -17,7 +20,7 @@
       "name": "apiBaseUrl",
       "type": "text",
       "required": false,
-      "default": "https://yourAPIEnvURL/requests"
+      "default": "https://progm.zendesk.com/requests"
     }
   ],
   "version": "1.4",
